--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
   border: 1px solid;
 }
 
+.btn-icon:hover {
+  box-shadow: 0px 8px 15px 0px rgb(0 0 0 / 20%);
+  transform: translateY(-3px);
+}
+
 .btn-icon * {
   transition: all 0.3s;
 }
@@ -78,4 +83,26 @@
 
 .linkedin:hover {
   background-color: #0a63bc;
+}
+
+.mCS_img_loaded {
+  border-radius: 50%;
+}
+
+.cv {
+  background-color: #4A63E7;
+  border-color: #4A63E7;
+}
+
+.cv .text {
+  color: white;
+}
+
+.cv .icon {
+  color: white;
+}
+
+.cv:hover {
+  background-color: #fb5959;
+  border-color: #fb5959;
 }
