--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -581,7 +581,7 @@ section.padding-60 {
 .timeline-line {
   position: absolute;
   top: 0px;
-  left: calc(20% + 2px);
+  left: calc(20% + 8px);
   bottom: 0px;
   width: 1px;
   background: #FF5959;
@@ -633,7 +633,7 @@ section.padding-60 {
   border-radius: 100%;
   padding: 4.5px;
   top: 15%;
-  right: -8px;
+  right: -14px;
   z-index: 1;
 }
 
@@ -1821,11 +1821,22 @@ button.close:focus {
 }
 @media only screen and (max-width: 515px) {
   .timeline-line {
-    left: calc(20% + 22px);
+    left: 0;
+  }
+  
+  .entry .title {
+    float: none;
+    width: auto;
+    padding-left: 15px;
   }
 
   .entry .title:before {
-    right: -28px;
+    left: -5px;
+  }
+  
+  .entry .body {
+    padding-left: 0px;
+    width: 90%;
   }
 
   .testimonial-item .testimonial-details .info {
